<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ 版权所有:杭州火图科技有限公司
  ~ 地址:浙江省杭州市滨江区西兴街道阡陌路智慧E谷B幢4楼
  ~
  ~ (c) Copyright Hangzhou Hot Technology Co., Ltd.
  ~ Floor 4,Block B,Wisdom E Valley,Qianmo Road,Binjiang District
  ~ 2013-2016. All rights reserved.
  -->

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.huotu.hotcms</groupId>
    <artifactId>hotcms</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>CMS</name>
    <description>
        CMS可以向owner(商户),UI设计师,一般用户提供符合角色设计的功能.
        结合数据服务平台的支持,CMS还可以获取业务数据
    </description>
    <organization>
        <name>Hangzhou Hot Technology Co., Ltd.</name>
        <url>http://www.huobanplus.com</url>
    </organization>

    <modules>
        <module>service</module>
        <module>web</module>
        <module>widget-skeleton</module>
        <module>widget-api</module>
        <module>widget-service</module>
        <module>manage-service</module>
        <module>widget-test</module>
    </modules>

    <distributionManagement>
        <repository>
            <id>huotu-nexus</id>
            <name>Nexus Release Repository</name>
            <url>http://repo.51flashmall.com:8081/nexus/content/repositories/releases/</url>
        </repository>
        <snapshotRepository>
            <id>huotu-nexus</id>
            <name>Nexus Snapshot Repository</name>
            <url>http://repo.51flashmall.com:8081/nexus/content/repositories/snapshots/</url>
        </snapshotRepository>
        <!--<site>-->
        <!--<id>${deploy.site.id}</id>-->
        <!--<url>scpexe://${deploy.site.url.home}</url>-->
        <!--</site>-->
    </distributionManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>

        <javaee.version>7.0</javaee.version>
        <spring.version>4.2.5.RELEASE</spring.version>
        <luffy.version>2.1-SNAPSHOT</luffy.version>
        <thymeleaf.version>3.0.0.RELEASE</thymeleaf.version>
        <huobanplus.version>1.5.0-SNAPSHOT</huobanplus.version>
        <slf4j.version>1.7.19</slf4j.version>
        <logging.version>1.2</logging.version>
        <io.version>2.4</io.version>
        <codec.version>1.10</codec.version>
        <assertj.version>3.3.0</assertj.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-framework-bom</artifactId>
                <version>${spring.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>${codec.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
            <version>${logging.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${io.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.thymeleaf</groupId>
            <artifactId>thymeleaf-spring4</artifactId>
            <version>${thymeleaf.version}</version>
        </dependency>
        <dependency>
            <groupId>org.thymeleaf.extras</groupId>
            <artifactId>thymeleaf-extras-springsecurity4</artifactId>
            <version>${thymeleaf.version}</version>
        </dependency>
        <dependency>
            <groupId>me.jiangcai.lib</groupId>
            <artifactId>spring</artifactId>
            <version>${luffy.version}</version>
        </dependency>
        <dependency>
            <groupId>me.jiangcai.lib</groupId>
            <artifactId>test</artifactId>
            <version>${luffy.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>5.1.31</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.16.6</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.huotu.huobanplus</groupId>
            <artifactId>common-client</artifactId>
            <version>${huobanplus.version}</version>
        </dependency>
        <dependency>
            <groupId>com.huotu.huobanplus</groupId>
            <artifactId>mall-sdk</artifactId>
            <version>${huobanplus.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-xml</artifactId>
            <version>2.6.0</version>
        </dependency>
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>fastjson</artifactId>
            <version>1.2.7</version>
        </dependency>
        <dependency>
            <groupId>javax</groupId>
            <artifactId>javaee-web-api</artifactId>
            <version>${javaee.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.6.2</version>
        </dependency>
        <dependency>
            <groupId>ognl</groupId>
            <artifactId>ognl</artifactId>
            <version>3.1.7</version>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>repo-huotu</id>
            <name>huotu Repository</name>
            <url>http://repo.51flashmall.com:8081/nexus/content/groups/public/</url>
        </repository>
        <repository>
            <id>repo-jc</id>
            <name>JiangCai Repository</name>
            <url>http://repo.jiangcai.me:8082/content/groups/public/</url>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>
            <!--javadoc暂时不用了,赶进度 各种不规范的jdoc数量预测是天文数字级别的-->
            <!--<plugin>-->
            <!--<groupId>org.apache.maven.plugins</groupId>-->
            <!--<artifactId>maven-javadoc-plugin</artifactId>-->
            <!--<version>2.10.3</version>-->
            <!--<configuration>-->
            <!--<show>private</show>-->
            <!--</configuration>-->
            <!--<executions>-->
            <!--<execution>-->
            <!--<id>attach-javadocs</id>-->
            <!--<phase>verify</phase>-->
            <!--<goals>-->
            <!--<goal>jar</goal>-->
            <!--</goals>-->
            <!--</execution>-->
            <!--</executions>-->
            <!--</plugin>-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.4</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>

